# CPP-SFML-Template

./: .gitignore  CMakeLists.txt  LICENCE  README.md  config.h.in
src/: main.cpp
